assets/css/main.scss
//640px 1240px 1440px



//GLOBALS
*,
*::before,
*::after {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-size: 100%;
    // font-family: 'Poppins', 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    font-family: monospace;
    // background-color: #191e1c;
    // color: #fff;
    overflow-x: hidden;

    &.no-scroll {
        overflow: hidden;
    }
}

a {
    text-decoration: none;
    color: #fff;
}

h1, h2, h3, p {
    margin-top: 0;
}

h2 {
    font-size: 45px;
    font-weight: 500;
    margin-bottom: 30px;

    @media (max-width: 899.98px) {
        font-size: 36px;
    }
}

p {
    font-size: 18px;
    line-height: 1.8;
    color: rgba(43, 53, 62, 0.7);

    @media (max-width: 899.98px) {
        font-size: 14.4px;
    }
}

.container {
    max-width: 1160px;
    margin: 0 auto;

    &--px {
        padding-right: 24px;
        padding-left: 24px;
    }
}

.button {
    padding: 15px 45px;
    cursor: pointer;
    display: inline-block;
}

// .bg-light {
//     background: #fff;
//     color: #000;
// }


//HEADER
.overlay {
    position: absolute;
    top: 98px;
    width: 100%;
    height: 100%;
    background: linear-gradient(to bottom, rgba(225, 225, 225, 0.7), rgba(225, 225, 225, 0.3));
    visibility: hidden;
    opacity: 0;
    transition: all 0.25s ease-in-out;
    z-index: 998;
    backdrop-filter: blur(0.1rem);

    &.showoverlay {
        visibility: visible;
        opacity: 1;
    }
}
.header {
    background-color: #191e1c;
    color: #fff;
    position: relative;
    z-index: 999;

    .navigation {
        display: flex;
        justify-content: space-between;
        align-items: center;
        padding-top: 30px;
        padding-bottom: 30px;

        &__logo {
            cursor: pointer;
        }

        &__toggle {
            cursor: pointer;

            .bar {
                width: 32px;
                height: 2px;
                background-color: white;
                display: block;
                transition: transform 0.2s ease-in-out;

                &:not(:last-child) {
                    margin-bottom: 5px;
                }
            }

            &.is-active {
                .bar:nth-of-type(1) {
                    transform: translateY(3px) rotate(45deg);
                }

                .bar:nth-of-type(2) {
                    display: none;
                }

                .bar:nth-of-type(3) {
                    transform: translateY(-4px) rotate(-45deg);
                }
            }
        }

        &__links {
            a {
                font-size: 16px;
                font-weight: 500;
                color: #fff;
                transition: color 0.3s ease-in-out;
                
                &:not(:last-child) {
                    margin-right: 30px;
                }

                &:hover {
                    color: #aaa;
                }

                &.navigation__cta {
                    padding: 12px 24px;
                    background: hsla(0, 100%, 99%, 0.2);
                    border-radius: 8px;
                    transition: all 0.3s ease-in-out;
        
                    &:hover {
                        background-color: #fff;
                        color: #191e1c;;
                    }
                }
            }
        }

        &__mobile {
            position: absolute;
            text-align: center;
            left: 50%;
            transform: translateX(-50%);
            top: 24px;
            background-color: #191e1c;
            width: calc(100% - 48px);
            padding: 75px 24px;
            border-radius: 5px;
            box-shadow: 0px 3px 12px rgb(0 0 0 / 15%);
            z-index: 999 !important;

            .links {
                display: flex;
                flex-direction: column;
                align-items: center;
            }

            a {
                font-size: 14px;
                font-weight: 500;
                color: #fff;

                &:not(:last-child) {
                    margin-bottom: 25px;
                }
                
                &:hover {
                    color: #aaa;
                }
                
                &.navigation__cta {
                    padding: 12px 24px;
                    background: hsla(0, 100%, 99%, 0.2);
                    border-radius: 8px;
                    transition: all 0.3s ease-in-out;

                    &:hover {
                        background-color: #fff;
                        color: #191e1c;;
                    }
                }
            }
        }
    }

    .menu-container {
          transform: scaleY(0);
          transition: transform 0.5s ease-in-out;
          
          &.open {
            transform: scaleY(1);
          }
    }
}

.custom-shape-divider-bottom-1664996132 {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    overflow: hidden;
    line-height: 0;
    transform: rotate(180deg);
}

.custom-shape-divider-bottom-1664996132 svg {
    position: relative;
    display: block;
    width: calc(100% + 1.3px);
    height: 150px;

    @media (max-width: 1000px) {
        height: 120px;
    }

    @media (max-width: 899.98px) {
        height: 45px;
    }
}

.custom-shape-divider-bottom-1664996132 .shape-fill {
    fill: #FFFFFF;
}
/* ... */

